--- a/lovecharity/index.html
+++ b/lovecharity/index.html
@@ -74,7 +74,7 @@
                     <!-- Start first slide -->
                     <div class="da-slide">
                         <h2 class="fittext2">弱勢關懷</h2>
-                        <h4>Clean & responsive</h4>
+                        <h4>Help people</h4>
                         <p>我們列出會在固定區域地點販售食品、口香糖、衛生紙等的弱勢民眾，當你肚子餓想吃東西時還能順手做愛心，這是多麼棒的體驗！讓我們一起用行動散佈每天的快樂給身邊需要的人。</p>
                         <a href="#Classify" class="da-link button">Read more</a>
                         <div class="da-img">
@@ -85,7 +85,7 @@
                     <!-- Start second slide -->
                     <div class="da-slide">
                         <h2>回收站點</h2>
-                        <h4>Easy to use</h4>
+                        <h4>Moving recycle stand</h4>
                         <p>是否常常想要丟喝完的飲料瓶，但是都找不到資源回收桶，最後只好隨便找垃圾桶來丟呢？現在讓我們告訴你，城市裡的資源回收桶其實比你想像的還多！</p>
                         <a href="#Classify" class="da-link button">Read more</a>
                         <div class="da-img">
@@ -96,11 +96,11 @@
                     <!-- Start third slide -->
                     <div class="da-slide">
                         <h2>志工服務</h2>
-                        <h4>Customizable</h4>
+                        <h4>Volunteer Service</h4>
                         <p>無聊時想做些有意義的事嗎？或是有滿腔熱血想一展長才嗎？來看看距離你最近的基金會在哪裡吧！</p>
                         <a href="#Classify" class="da-link button">Read more</a>
                         <div class="da-img">
-                            <img src="images/Slider03.png" width="320" alt="image03">
+                            <img src="images/Slider04.png" width="320" alt="image03">
                         </div>
                     </div>
                     <!-- End third slide -->
@@ -111,7 +111,7 @@
                         <p>整理全球各地發生的有關議題內容，經由客觀的報導方式，讓重要訊息能及時且真實地傳達給讀者們。並讓有意願工作的街友或社會弱勢的人們，能夠得到一個自營生計的機會，讓他們能夠藉由雜誌的販售，重建個人的信心與尊嚴，進而重新取回生活的主導權。</p>
                         <a href="#Classify" class="da-link button">Read more</a>
                         <div class="da-img">
-                            <img src="images/Slider02.png" width="320" alt="image02">
+                            <img src="images/Slider03.png" width="320" alt="image02">
                         </div>
                     </div>
                     <!-- End Fourth slide -->
